--- a/P3/P1/P3.csproj
+++ b/P3/P1/P3.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DlgDatosZona.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DlgDatosZona.Designer.cs">
+      <DependentUpon>DlgDatosZona.cs</DependentUpon>
+    </Compile>
     <Compile Include="EditHora.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -71,6 +77,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AcercaDe.resx">
       <DependentUpon>AcercaDe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DlgDatosZona.resx">
+      <DependentUpon>DlgDatosZona.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="RelojAnalogico.resx">
       <DependentUpon>RelojAnalogico.cs</DependentUpon>
